@@ -7,6 +7,7 @@ Revision history for PCRD
 	- Add minimal hook system, allow hooking to execution of module features
 	- Brightness and volume steps are now configurable
 	- Fix --logs argument to pcrctl
+	- Add config action to pcrctl, explaining current config
 
 0.001 - 2025-05-15
 	- First version
